--- a/src/global/buttons.module.css
+++ b/src/global/buttons.module.css
@@ -1,24 +1,37 @@
 .primary_link{
     text-decoration: none;
     color: white;
+    font-weight: bold;
 }
 
 .primary_link:hover{
     color: white;
 }
 
-.primary{
+.primary_button{
     font-size: 1.6rem;
-    background-color: #163A5F;
-    border: 1px solid #163A5F;
-    color: #FFFFFF;
+    font-weight: 600;
+    background: rgb(117,111,230);
+    background: linear-gradient(308deg, rgba(117,111,230,1) 0%, rgba(46,40,162,1) 100%); color: #FFFFFF;
     transition: 0.2s ease-in-out;
     border-radius: 0.5rem;
     padding: 0.5rem;
     text-decoration: none;  
 }
 
-.primary:hover{
-    color: #163A5F;
-    background-color: #FFFFFF; 
+.primary_button:hover{
+    color: white;
+}
+
+.secondary_button{
+    font-size: 1.6rem;
+    font-weight: 600;
+    background-color: none;
+    padding: 0.5rem;
+    text-decoration: none;  
+    color: #b9b9b9;
+}
+
+.secondary_button:hover{
+    color: #b9b9b9;
 }
