--- a/src/global/buttons.module.css
+++ b/src/global/buttons.module.css
@@ -17,6 +17,8 @@
     border-radius: 0.5rem;
     padding: 0.5rem;
     text-decoration: none;  
+    border: none;
+    outline: none;
 }
 
 .primary_button:hover{
@@ -34,4 +36,63 @@
 
 .secondary_button:hover{
     color: #b9b9b9;
+}
+
+.next_button
+{
+    padding: 0;
+    border: none;
+    outline: none;
+    border-radius: 3rem;
+    background-color: #FFFFFF;
+    border: 1px solid #ececec;
+    overflow: hidden;
+    width: 15rem;
+}
+
+.next_button > div
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    position: relative;
+}
+
+.next_button .next_button_text
+{
+    font-size: 1.8rem;
+    padding: 0.5rem 1rem;
+}
+
+.next_button .next_button_icon
+{
+    position: absolute;
+    right: 0;
+    background-color: rgba(46,40,162,1);
+    border: 1px solid rgba(46,40,162,1);
+    color: white;
+    font-size: 1.8rem;
+    padding: 0.5rem 1rem;
+    border-radius: 0 3rem 3rem 0;
+    z-index: 2;
+}
+
+.next_button .next_button_text_hover
+{
+    
+    font-size: 1.8rem;
+    padding: 0.5rem 3rem;
+    margin-right: -10rem;
+
+    border: 1px solid rgba(46,40,162,1);
+    background-color: rgba(46,40,162,1);
+    color: white;
+    z-index: 1;
+    transition: all 0.3s ease-in-out;
+}
+
+.next_button>div:hover > .next_button_text_hover
+{
+    margin-right: 13rem;
 }
